--- a/themes/kmom04/scss/header.scss
+++ b/themes/kmom04/scss/header.scss
@@ -27,6 +27,6 @@
     padding: 0.375em 0.375em 0 0.5em;
 }
 
-.header .last-li-icon {
-    padding: 0 0 0 0.5em;
+.header .li-icon-night {
+    padding: 0.375em 0.7em 0 0.9em;
 }
